# modtomc

./: .gitignore  Makefile  README.md  csvtomodel.py  main.py  output_voxel_grid.csv  pyproject.toml
bd/: main.go
bd/block_gen/: block_gen.go
bd/py/: process.py  pyproject.toml
bd/tmp/: output_voxel_grid_2.csv
blocks/: main.go
fd/: package.json  pnpm-lock.yaml  tsconfig.app.json
fd/src/: App.vue
fd/src/components/: Convert.vue  World.vue
py/: main.py  pyproject.toml
server/: go.mod  main.go
server/block_gen/: data.json
server/handler/: convert_handler.go
server/py/: process.py  pyproject.toml
server/py/model/: voxelized_model.glb
server/router/: router.go
server/tmp/: output_voxel_grid_1.csv
src/: App.vue  style.css
src/components/: World.vue
tmp/: output_voxel_grid_4.csv
web/: index.html  package.json  pnpm-lock.yaml  tsconfig.app.json
web/src/: App.vue  cluster.ts  color-conversions.ts  colorTree.ts  eventBus.ts  findPic.ts  main.ts  sceneConfig.ts  smooth.ts  style.css
web/src/components/: BaseThreeScene.vue  Block.ts  ColorTreeNode.vue  Convert.vue  GLBContent.vue  GLBImporter.vue  GLBUploader.ts  GLBViewer.vue  NeoBlock.ts  World.vue  WorldContent.vue  data.ts  texture.ts  world.ts
