[project]
name = "modtomc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.0, <3.12"
dependencies = [
    "ipykernel>=6.30.0",
    "numpy>=2.3.2",
    "open3d>=0.19.0",
    "pandas>=2.3.1",
    "pillow>=11.3.0",
    "pyglet<2",
    "pyvista[jupyter]>=0.45.3",
    "trame>=3.11.0",
    "trimesh>=4.7.1",
    "vtk>=9.4.2",
]
